Atualiza index.html para corrigir site

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   direto para a sobre de contato da página.-->
                 <button class="botao_secundario"
                     onclick="document.getElementById('sobre').scrollIntoView({ behavior: 'smooth' })">
-                    Conhecer o Trabalho
+                    Conhecer o Trabalho.
                 </button>
 
             </div>
