--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Viviane Júnior – Psicanalista</title>
-    <link rel="shortcut icon" href="_imagens/favi-icon.jpg" image/x-icon">
+    <link rel="shortcut icon" href="img/favicon.jpg">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -52,7 +52,7 @@
         </div>
         <!-- imagem da vivi-->
         <div class="topo_imagem">
-            <img src="_imagens/_viviane-maos.jpg" alt="Foto Viviane Júnior">
+            <img src="img/viviane-maos.jpg" alt="Foto Viviane Júnior">
         </div>
     </section>
     <!-- conteudo principal-->
