--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section class="secao_topo" id="inicio">
         <div class="topo_texto">
             <h2>Cuidar da mente é o primeiro passo para <strong> tranformar</strong> sua vida</h2>
-            <p>Psicoterapia é um espaço seguro de escuta, cuidado e transformação. Aqui, você não precisa fingir ser
+            <p>Psicoterapia é um espaço seguro de escuta, cuidado e transformação. Aqui, você não precisa ser
                 forte o tempo todo.</p>
             <!-- os botoes de chamada de ação ficara aqui-->
             <div class="grupo_botoes_topo">
@@ -63,20 +63,31 @@
                 <h3 class="titulo_secao">Sobre Viviane</h3>
                 <div class="cartao_sobre">
                     <!-- textos -->
-                    <p>Minha caminhada profissional começou na Pedagogia, passou pelas Ciências Biológicas e encontrou
-                        na Psicanálise um propósito: cuidar da saúde emocional de forma profunda e humanizada.
+                    <p>Minha trajetória profissional teve início na área da Educação, espaço onde aprendi, desde muito
+                        cedo, a escutar histórias, observar comportamentos e reconhecer as singularidades de cada
+                        sujeito. Ao longo dessa experiência, o contato cotidiano com crianças, jovens, famílias e
+                        equipes revelou algo que ia além dos processos pedagógicos: as demandas emocionais, os
+                        sofrimentos silenciosos e os atravessamentos psíquicos que impactam diretamente a vida, as
+                        escolhas e as relações humanas. <br>
+
+                        Foi a partir dessa vivência que surgiu a necessidade de aprofundar meu olhar para além do campo
+                        educacional. O desejo de compreender mais profundamente o funcionamento psíquico, as dores
+                        subjetivas e os modos singulares de existir me conduziu a um processo de transição profissional,
+                        direcionando meu percurso para a Psicologia e, especialmente, para a Psicanálise.
+                        Dediquei-me aos estudos em Psicanálise, ampliando minha formação com abordagens complementares como a arte-terapia, que favorecem o acesso simbólico às emoções e ao inconsciente. Esse caminho formativo consolidou minha prática clínica, sustentada pela escuta ética, pelo respeito à singularidade do sujeito e pelo compromisso com processos de transformação genuínos.
+                        <br>
+                        Hoje, atuo como Psicanalista Clínica, integrando minha experiência anterior na Educação a uma prática terapêutica sensível, profunda e humanizada. Acredito que cada sujeito carrega uma história que merece ser escutada com cuidado, sem julgamentos e no tempo possível de cada um. Minha atuação é marcada pelo acolhimento, pela ética e pela construção de um espaço seguro onde o sofrimento possa ser simbolizado e o desejo encontre lugar.
 
                     </p>
-                    <p>A soma dessas formações molda meu olhar sensível e técnico sobre o ser humano. Hoje, atendo
-                        adutos em geral, oferecendo um espaço seguro para quem busca se compreender, se fortalecer e
-                        transformar sua história.</p>
+                    <p></p>
                 </div>
             </div>
             <!-- texto pequeno destacando as especialidades-->
             <aside>
                 <div class="cartao_sobre">
                     <h4 class="titulo-sobre"> Especialidades</h4>
-                    <p>Atendimento individual, terapia para mulheres,adultos, orientações sobre ansiedade e processos de luto.</p>
+                    <p>Atendimento individual, terapia para mulheres,adultos, orientações sobre ansiedade e processos de
+                        luto.</p>
                 </div>
             </aside>
         </section>
@@ -94,7 +105,8 @@
                 </article>
                 <article class="cartao_atendimento">
                     <h4>Atendimento Presencial</h4>
-                    <p>O atendimento presencial é realizado somente mediante consulta e alinhamento prévio, conforme disponibilidade. Para saber mais, entre em contato..</p>
+                    <p>O atendimento presencial é realizado somente mediante consulta e alinhamento prévio, conforme
+                        disponibilidade. Para saber mais, entre em contato..</p>
                 </article>
             </div>
         </section>
@@ -149,8 +161,6 @@
         <!-- AGENDA -->
         <section class="secao_agenda" id="contato">
             <h3 class="titulo_secao">Agende sua sessão</h3>
-            <p>Escolha dia e horário — atendimentos presenciais e online. Para agendar, envie mensagem pelo WhatsApp.
-            </p>
             <button class="botao_agendar" onclick="abrir_whatsapp()">Agendar via WhatsApp</button>
         </section>
         <!-- DÚVIDAS FREQUENTES -->
@@ -163,7 +173,7 @@
             </details>
             <details>
                 <summary>Qual a duração das sessões?</summary>
-                <p>Geralmente 50 minuto mas podemos alinhar conforme necessidade.</p>
+                <p>Sessões de 50 minutos, ou adequando a necessidade do paciente.</p>
             </details>
         </section>
 
